--- a/backend/finbattle/build.gradle
+++ b/backend/finbattle/build.gradle
@@ -33,17 +33,28 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	//security + Oauth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 	//DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	//	runtimeOnly 'org.postgresql:postgresql'
 
 	//Monitoring
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
 	//Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
