--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
+    "@types/styled-components": "^5.1.34",
     "lucide-react": "^0.477.0",
+    "pixi.js": "^8.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "pixi.js": "^8.8.1"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
