--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.8.1",
     "lucide-react": "^0.477.0",
     "pixi.js": "^8.8.1",
     "react": "^19.0.0",
