--- a/backend/finbattle/build.gradle
+++ b/backend/finbattle/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
 	//security + Oauth2
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
 	//DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
