S12P21D108-13 feat: 고양이 뽑기 구현

--- a/backend/finbattle/build.gradle
+++ b/backend/finbattle/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     //Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 }
