--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.8.1",
+    "express": "^4.21.2",
     "lucide-react": "^0.477.0",
     "pixi.js": "^6.5.9",
     "react": "^19.0.0",
@@ -21,7 +22,8 @@
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "vite-express": "^0.20.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
