--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
+    "@stomp/stompjs": "^7.0.1",
+    "@types/sockjs-client": "^1.5.4",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.8.1",
     "express": "^4.21.2",
@@ -22,6 +24,7 @@
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.15",
     "vite-express": "^0.20.0"
   },
