S12P21D108-152 ci:application 배포 전용으로 설정 변경

--- a/backend/finbattle/src/main/resources/application.yml
+++ b/backend/finbattle/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: finbattle
   profiles:
-    active: local
+    active: prod
     group:
       local: local, secret
       prod: prod, secret
