--- a/backend/finbattle/src/main/resources/application-prod.yml
+++ b/backend/finbattle/src/main/resources/application-prod.yml
@@ -8,5 +8,8 @@ spring:
       host: redis
       port: 6379
 
+server:
+  port: 9091
+
 app:
-  baseUrl: [serverURL]
+  baseUrl: https://j12d108.p.ssafy.io
