--- a/backend/finbattle/Jenkinsfile
+++ b/backend/finbattle/Jenkinsfile
@@ -89,7 +89,7 @@ pipeline {
                           docker pull ${BACKEND_IMAGE_NAME}
 
                           # 컨테이너 실행
-                          docker run -d --name ${BACKEND_CONTAINER_NAME} --network finbattle \
+                          docker run -d --name ${BACKEND_CONTAINER_NAME} --network fincatch \
                               -p 9097:9091 \
                               -e TZ=Asia/Seoul \
                               -e JAVA_TOOL_OPTIONS="-Duser.timezone=Asia/Seoul" \
