--- a/backend/finbattle/src/main/resources/application-prod.yml
+++ b/backend/finbattle/src/main/resources/application-prod.yml
@@ -2,11 +2,7 @@ spring:
   config:
     activate:
       on-profile: prod
-
-  data:
-    redis:
-      host: redis
-      port: 6379
+    import: application-secret.yml
 
 server:
   port: 9091
