--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -53,12 +53,12 @@ pipeline {
                 script {
                     withCredentials([
                         string(credentialsId: 'FRONTEND_IMAGE_NAME', variable: 'FRONTEND_IMAGE_NAME'),
-                        string(credentialsId: 'FRONTEND_CONTIANER_NAME', variable: 'FRONTEND_CONTIANER_NAME')    
+                        string(credentialsId: 'FRONTEND_CONTAINER_NAME', variable: 'FRONTEND_CONTAINER_NAME')    
                     ]) {
                         sh """
-                            docker stop ${FRONTEND_CONTIANER_NAME} | true
-                            docker rm ${FRONTEND_CONTIANER_NAME} | true
-                            docker run -d --name ${FRONTEND_CONTIANER_NAME} \
+                            docker stop ${FRONTEND_CONTAINER_NAME} | true
+                            docker rm ${FRONTEND_CONTAINER_NAME} | true
+                            docker run -d --name ${FRONTEND_CONTAINER_NAME} \
                                 --network fincatch -p 3210:3209 \
                             ${FRONTEND_IMAGE_NAME}
                         """
