--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY tsconfig.json ./
 COPY . .
 RUN npm run build
 FROM nginx:latest
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 3209
 CMD ["nginx", "-g", "daemon off;"]
