--- a/backend/finbattle/src/main/resources/application-prod.yml
+++ b/backend/finbattle/src/main/resources/application-prod.yml
@@ -4,6 +4,11 @@ spring:
       on-profile: prod
     import: application-secret.yml
 
+  data:
+    redis:
+      host: redis
+      port: 6379
+
 server:
   port: 9091
 
