ci: Dockerfile 수정

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 3209;
-    server_name localhost;
+    server_name j12d108.p.ssafy.io;
 
     root /usr/share/nginx/html;
     index index.html;
