--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "@types/sockjs-client": "^1.5.4",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.8.1",
-    "express": "^4.21.2",
     "lucide-react": "^0.477.0",
     "pixi.js": "^6.5.9",
     "react": "^19.0.0",
@@ -25,8 +24,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
-    "styled-components": "^6.1.15",
-    "vite-express": "^0.20.0"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
