fix: app.baseUrl 통합

--- a/backend/finbattle/src/main/resources/application-prod.yml
+++ b/backend/finbattle/src/main/resources/application-prod.yml
@@ -13,5 +13,4 @@ server:
   port: 9091
 
 app:
-  clientUrl: http://j12d108.p.ssafy.io
-  baseUrl: http://j12d108.p.ssafy.io
+  baseUrl: https://j12d108.p.ssafy.io
