--- a/backend/finbattle/src/main/resources/application-prod.yml
+++ b/backend/finbattle/src/main/resources/application-prod.yml
@@ -14,3 +14,16 @@ server:
 
 app:
   baseUrl: https://j12d108.p.ssafy.io
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG  # Hibernate SQL 로그 출력
+    org.springframework.security: DEBUG  # Security 관련 로그 줄이기
+    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG  # 요청 로그 줄이기
+    com.finbattle.global.common.filter.JWTFilter: DEBUG  # JWT 필터 로깅 최소화
+    org.springframework.web: WARN  # Spring Web 관련 로그 최소화
+    org.apache.coyote.http11: WARN  # Tomcat 요청 로그 줄이기
+    org.apache.tomcat: WARN  # Tomcat 관련 상세 로그 줄이기
+
+  pattern:
+    console: "%clr(%-5level) %clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} --- [%t] %clr(%-40.40logger{39}){cyan} : %msg%n"
