fix: refreshToken Redis 저장 key 변경

--- a/backend/finbattle/src/main/resources/application-local.yml
+++ b/backend/finbattle/src/main/resources/application-local.yml
@@ -12,7 +12,8 @@ deploy:
   env: local
 
 app:
-  baseUrl: http://localhost:3210
+  baseUrl: http://localhost:8080
+  clientUrl: http://localhost:3210
 
 logging:
   level:
