S12P21D108-168 merge: 머지 전 env 파일 변경

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,8 @@
-로컬
-VITE_API_BASE_URL="http://localhost:8080"
-VITE_APP_SOCEKT_BASE_URL="wss://localhost:8080"
+# 로컬
+# VITE_API_BASE_URL="http://localhost:8080"
+# VITE_APP_SOCEKT_BASE_URL="wss://localhost:8080"
 
 
-# # 배포
-# VITE_API_BASE_URL="https://j12D108.p.ssafy.io"
-# VITE_APP_SOCEKT_BASE_URL="wss://j12D108.p.ssafy.io"
+# 배포
+VITE_API_BASE_URL="https://j12D108.p.ssafy.io"
+VITE_APP_SOCEKT_BASE_URL="wss://j12D108.p.ssafy.io"
