--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@types/sockjs-client": "^1.5.4",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "lucide-react": "^0.477.0",
     "pixi.js": "^6.5.9",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
