--- a/backend/finbattle/src/main/resources/application-prod.yml
+++ b/backend/finbattle/src/main/resources/application-prod.yml
@@ -4,9 +4,27 @@ spring:
       on-profile: prod
     import: application-secret.yml
 
+  data:
+    redis:
+      host: redis
+      port: 6379
+
 server:
   port: 9091
 
 app:
   clientUrl: https://j12d108.p.ssafy.io
   baseUrl: https://j12d108.p.ssafy.io
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG  # Hibernate SQL 로그 출력
+    org.springframework.security: WARN  # Security 관련 로그 줄이기
+    org.springframework.web.filter.CommonsRequestLoggingFilter: WARN  # 요청 로그 줄이기
+    com.finbattle.global.common.filter.JWTFilter: WARN  # JWT 필터 로깅 최소화
+    org.springframework.web: WARN  # Spring Web 관련 로그 최소화
+    org.apache.coyote.http11: WARN  # Tomcat 요청 로그 줄이기
+    org.apache.tomcat: WARN  # Tomcat 관련 상세 로그 줄이기
+
+  pattern:
+    console: "%clr(%-5level) %clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} --- [%t] %clr(%-40.40logger{39}){cyan} : %msg%n"
