feat: p6spy, GlobalExceptionHandler 로그 가독성 향상

--- a/backend/finbattle/src/main/resources/application.yml
+++ b/backend/finbattle/src/main/resources/application.yml
@@ -8,13 +8,16 @@ spring:
       prod: prod, secret
 
   jpa:
-    generate-ddl: true
+    generate-ddl: false
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
     show-sql: false
+
+  #p6spy query logging
+  decorator:
+    datasource:
+      p6spy:
+        enable-logging: true
 
   data:
     redis:
