--- a/backend/finbattle/build.gradle
+++ b/backend/finbattle/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    implementation 'org.springframework.security:spring-security-messaging'
 
     //DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
