S12P21D108-216 fix: 방 입장 안되는 오류 해결

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
-# # 로컬
-# VITE_API_BASE_URL="http://localhost:8080"
-# VITE_APP_SOCKET_BASE_URL="http://localhost:8080/ws/firechat"
+# 로컬
+VITE_API_BASE_URL="http://localhost:8080"
+VITE_APP_SOCKET_BASE_URL="http://localhost:8080/ws/firechat"
 
-배포
-VITE_API_BASE_URL="https://j12D108.p.ssafy.io"
-VITE_APP_SOCKET_BASE_URL="https://j12D108.p.ssafy.io/ws/firechat"
+# 배포
+# VITE_API_BASE_URL="https://j12D108.p.ssafy.io"
+# VITE_APP_SOCKET_BASE_URL="https://j12D108.p.ssafy.io/ws/firechat"
