--- a/backend/finbattle/src/main/resources/application.yml
+++ b/backend/finbattle/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   jpa:
     generate-ddl: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: false
 
   #p6spy query logging
