--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 # 로컬
-VITE_API_BASE_URL="http://localhost:8080"
-VITE_APP_SOCKET_BASE_URL="http://localhost:8080/ws/firechat"
+# VITE_API_BASE_URL="http://localhost:8080"
+# VITE_APP_SOCKET_BASE_URL="http://localhost:8080/ws/firechat"
 
 # 배포
 VITE_API_BASE_URL="https://j12D108.p.ssafy.io"
