--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    tools {
+        sonarQube 'Default'
+    }
+
     environment {
         FRONTEND_BRANCH = 'feature-frontend'
     }
