--- a/backend/finbattle/src/main/resources/application-local.yml
+++ b/backend/finbattle/src/main/resources/application-local.yml
@@ -14,7 +14,7 @@ deploy:
 app:
   baseUrl: http://localhost:8080
   clientUrl: http://localhost:3210
-  fastapiUrl: https://localhost:8000
+  fastapiUrl: http://j12d108.p.ssafy.io:8001
 
 logging:
   file:
